--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
   <h1>Miso Leo</h1>
   <p>Welcome to my website!</p>
-  <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
+  <img src="https://scontent-hou1-1.xx.fbcdn.net/v/t39.30808-6/274215418_3552959134946547_8323266143077200689_n.jpg?stp=dst-jpg_p526x296&_nc_cat=106&ccb=1-5&_nc_sid=8bfeb9&_nc_ohc=0w6xQh5c0ScAX8XfOuv&_nc_ht=scontent-hou1-1.xx&oh=00_AT8qDuctQ1QfrIgSu04F-_K9fHUGzJjYz__gCs_cCFSv6Q&oe=62689587" />
 </body>
  
 </html>
