--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <html>
  
 <body>
-  <h1>Miso Leo</h1>
-  <p>Welcome to my website!</p>
-  <img src="https://scontent-hou1-1.xx.fbcdn.net/v/t39.30808-6/274215418_3552959134946547_8323266143077200689_n.jpg?stp=dst-jpg_p526x296&_nc_cat=106&ccb=1-5&_nc_sid=8bfeb9&_nc_ohc=0w6xQh5c0ScAX8XfOuv&_nc_ht=scontent-hou1-1.xx&oh=00_AT8qDuctQ1QfrIgSu04F-_K9fHUGzJjYz__gCs_cCFSv6Q&oe=62689587" />
-</body>
+  <h1>We the Dogs</h1>
+  <p>Welcome to my website!<br>My name is Miso, I am a lazy Shiba and my sister is Bunny the crazy Pomsky</p>
+  <img src="https://scontent-hou1-1.xx.fbcdn.net/v/t39.30808-6/274922646_3558574791051648_8062134945879207346_n.jpg?stp=dst-jpg_s600x600&_nc_cat=107&ccb=1-5&_nc_sid=8bfeb9&_nc_ohc=5AHoTCKSKg8AX8pgNGH&tn=MfSfIpfW3C0rUMsM&_nc_ht=scontent-hou1-1.xx&oh=00_AT9b6Fei_dKz3pEGkEHk7nF5KsgJgh9NCVHwbgeIFZ2zvw&oe=6267B63F"/>
+  <img src="https://scontent-hou1-1.xx.fbcdn.net/v/t39.30808-6/274996726_3558574781051649_3429282531381031454_n.jpg?stp=dst-jpg_s600x600&_nc_cat=103&ccb=1-5&_nc_sid=8bfeb9&_nc_ohc=mWYn-V4vK-MAX-uHD-C&_nc_ht=scontent-hou1-1.xx&oh=00_AT_5VbZzcT4jViPpWujPKtP7ZGGr1ntWbILr1yMO1eqhDg&oe=62671945"/>
+ </body>
  
 </html>
