--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
   <p>Welcome to my website!<br>My name is Miso, I am a lazy Shiba. My sister is Bunny, the crazy Pomsky.<br>We like treats balls, and squeaky toys.</p>
   <img src="https://scontent-hou1-1.xx.fbcdn.net/v/t39.30808-6/274922646_3558574791051648_8062134945879207346_n.jpg?stp=dst-jpg_s600x600&_nc_cat=107&ccb=1-5&_nc_sid=8bfeb9&_nc_ohc=5AHoTCKSKg8AX8pgNGH&tn=MfSfIpfW3C0rUMsM&_nc_ht=scontent-hou1-1.xx&oh=00_AT9b6Fei_dKz3pEGkEHk7nF5KsgJgh9NCVHwbgeIFZ2zvw&oe=6267B63F"/>
   <img src="https://scontent-hou1-1.xx.fbcdn.net/v/t39.30808-6/274996726_3558574781051649_3429282531381031454_n.jpg?stp=dst-jpg_s600x600&_nc_cat=103&ccb=1-5&_nc_sid=8bfeb9&_nc_ohc=mWYn-V4vK-MAX-uHD-C&_nc_ht=scontent-hou1-1.xx&oh=00_AT_5VbZzcT4jViPpWujPKtP7ZGGr1ntWbILr1yMO1eqhDg&oe=62671945"/>
-  <video>
-    <source src="https://www.facebook.com/100006974865504/videos/pcb.3493587484217046/254553523347770" controls>
-  </video>
+  <img src="https://scontent-hou1-1.xx.fbcdn.net/v/t39.30808-6/264093257_3493587510883710_8381387607626087835_n.jpg?_nc_cat=104&ccb=1-5&_nc_sid=8bfeb9&_nc_ohc=bY4LUshmEYYAX9DVoU0&_nc_ht=scontent-hou1-1.xx&oh=00_AT8nEjkyEWk0lRl2xlu6MWiwUmIfVpoqc9JOSLhjE5HbBw&oe=62683B73"/> 
  </body>
  
 </html>
